--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   what-is-the-price-now:
 #    image: "fqrmix/accounting-chat-manager-kotlin:latest"
@@ -18,23 +17,11 @@ services:
      - postgres
     command: ["java", "-jar", "app.jar"]
 
-  chrome:
-    image: selenium/standalone-chrome:latest
-    platform: linux/amd64
-    ports:
-      - "4444:4444"
-    container_name: standalone-chrome
-    hostname: standalone-chrome
-    networks:
-      - postgres-network
-    privileged: true
-    shm_size: 2g
-
   postgres:
     image: 'postgres:latest'
     container_name: postgres
-    ports:
-      - "15432:5432"
+#    ports:
+#      - "15432:5432"
     env_file:
       - .env
     networks:
@@ -42,19 +29,6 @@ services:
     volumes:
       - /Users/svsergeev/Developer/my-projects/what-is-the-price-now-kotlin/db-data/:/var/lib/postgresql/data/
 #      - /Users/svsergeev/Developer/my-projects/what-is-the-price-now-kotlin/init.sql:/docker-entrypoint-initdb.d/init.sql
-
-  pgadmin:
-    image: dpage/pgadmin4
-    ports:
-      - "15433:80"
-    env_file:
-      - .env
-    depends_on:
-      - postgres
-    networks:
-      - postgres-network
-    volumes:
-      - /Users/svsergeev/Developer/my-projects/what-is-the-price-now-kotlin/pgadmin-data/:/var/lib/pgadmin/
 
 #networks:
 #  docker-private-network:
